--- a/.github/workflows/pr_deploy.yml
+++ b/.github/workflows/pr_deploy.yml
@@ -20,12 +20,23 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
+            const {execSync} = require('child_process');
             const r = await github.pulls.get({
               owner: 'nwtgck',
               repo: 'use-actions-netlify',
               pull_number: 3
             });
+            git status
             console.log(r);
+            const prUserName = r.data.head.user.login;
+            const baseRef = r.data.base.ref;
+            const headRef = r.data.head.ref;
+            const fullRepoName = r.data.head.repo.full_name;
+            execSync(`git checkout ${baseRef}`);
+            execSync(`git checkout -b preview ${baseRef}`);
+            execSync(`git pull https://github.com/${fullRepoName}.git ${headRef}`);
+            git status
+            git log
         timeout-minutes: 1
       # - name: Deploy to Netlify
       #   uses: nwtgck/actions-netlify@v1.2
