--- a/.github/workflows/pr_deploy.yml
+++ b/.github/workflows/pr_deploy.yml
@@ -21,22 +21,23 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const {execSync} = require('child_process');
+            function echoExecSync(cmd) { console.log(cmd); execSync(cmd) }
             const r = await github.pulls.get({
               owner: 'nwtgck',
               repo: 'use-actions-netlify',
               pull_number: 3
             });
-            execSync(`git status`);
+            echoExecSync(`git status`);
             console.log(r);
             const prUserName = r.data.head.user.login;
             const baseRef = r.data.base.ref;
             const headRef = r.data.head.ref;
             const fullRepoName = r.data.head.repo.full_name;
-            execSync(`git checkout ${baseRef}`);
-            execSync(`git checkout -b preview ${baseRef}`);
-            execSync(`git pull https://github.com/${fullRepoName}.git ${headRef}`);
-            execSync(`git status`);
-            execSync(`git log`);
+            echoExecSync(`git checkout ${baseRef}`);
+            echoExecSync(`git checkout -b preview ${baseRef}`);
+            echoExecSync(`git pull --no-ff https://github.com/${fullRepoName}.git ${headRef}`);
+            echoExecSync(`git status`);
+            echoExecSync(`git log`);
         timeout-minutes: 1
       # - name: Deploy to Netlify
       #   uses: nwtgck/actions-netlify@v1.2
