--- a/.github/workflows/pr_deploy.yml
+++ b/.github/workflows/pr_deploy.yml
@@ -19,7 +19,8 @@ jobs:
         with:
           # 0 indicates all history
           fetch-depth: 0
-      - uses: actions/github-script@v4
+      - name: Merge without push
+        uses: actions/github-script@v4
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
@@ -50,3 +51,17 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
+      - name: Status
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            await github.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              context: 'MyDeploy',
+              description: 'my deployment',
+              state: 'success',
+              sha: '8c47e6982bcd31082dbecdcd8a661a06ea70a8eb',
+              target_url: "https://exmaple.com"
+            })
