--- a/.github/workflows/pr_deploy.yml
+++ b/.github/workflows/pr_deploy.yml
@@ -20,6 +20,7 @@ jobs:
           # 0 indicates all history
           fetch-depth: 0
       - name: Merge without push
+        id: merge
         uses: actions/github-script@v4
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -37,6 +38,7 @@ jobs:
             echoExecSync(`git checkout ${baseRef}`);
             echoExecSync(`git checkout -b preview ${baseRef}`);
             echoExecSync(`git pull https://github.com/${r.data.head.repo.full_name}.git ${r.data.head.ref}`);
+            core.setOutput('sha', r.data.head.sha);
       # Build
       - name: Deploy to Netlify
         id: netlify
@@ -47,7 +49,7 @@ jobs:
           deploy-message: "Deploy from GitHub Actions"
           enable-pull-request-comment: false
           enable-commit-comment: false
-          github-deployment-ref: 8c47e6982bcd31082dbecdcd8a661a06ea70a8eb
+          github-deployment-ref: ${{ steps.merge.outputs.sha }}
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
@@ -60,9 +62,9 @@ jobs:
             await github.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              context: 'MyDeploy',
-              description: 'my deployment',
+              context: 'Netlify',
+              description: 'preview',
               state: 'success',
-              sha: '8c47e6982bcd31082dbecdcd8a661a06ea70a8eb',
+              sha: '${{ steps.merge.outputs.sha }}',
               target_url: "${{ steps.netlify.outputs.deploy-url }}"
             })
