--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 name: Build and Deploy to Netlify
 on:
   push:
-  pull_request_target:
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-18.04
