--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -2,6 +2,10 @@ name: Build and Deploy to Netlify
 on:
   push:
   pull_request:
+
+permissions:
+  deployments: write
+
 jobs:
   build:
     runs-on: ubuntu-18.04
