--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -4,8 +4,9 @@ on:
   pull_request:
 
 permissions:
+  # for create-a-commit-status
   statuses: write
-  deployments: write
+  # deployments: write
 
 jobs:
   build:
